objects/BW_TestObject_Lookup_Parent__c.object
<CustomObject>
 <fullName>BW_TestObject_Lookup_Parent__c</fullName>
 <fields>
  <fullName>SFCheckbox__c</fullName>
  <defaultValue>false</defaultValue>
  <label>SFCheckbox</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>SFCurrency__c</fullName>
  <label>SFCurrency</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Currency</type>
 </fields>
 <fields>
  <fullName>SFDateTime__c</fullName>
  <label>SFDateTime</label>
  <type>DateTime</type>
 </fields>
 <fields>
  <fullName>SFDate__c</fullName>
  <label>SFDate</label>
  <type>Date</type>
 </fields>
 <fields>
  <fullName>SFEmail__c</fullName>
  <label>SFEmail</label>
  <type>Email</type>
 </fields>
 <fields>
  <fullName>SFNumber_16_2__c</fullName>
  <label>SFNumber 16 2</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>SFNumber_18_0__c</fullName>
  <label>SFNumber 18 0</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>SFPercent_16_2__c</fullName>
  <label>SFPercent 16 2</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>SFPercent_18_0__c</fullName>
  <label>SFPercent 18 0</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>SFPhone__c</fullName>
  <label>SFPhone</label>
  <type>Phone</type>
 </fields>
 <fields>
  <fullName>SFPicklistMulti__c</fullName>
  <label>SFPicklistMulti</label>
  <type>MultiselectPicklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>abc</fullName>
    </value>
    <value>
     <fullName>123</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>SFPicklist__c</fullName>
  <label>SFPicklist</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>abc</fullName>
    </value>
    <value>
     <fullName>123</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>SFTextAreaLong_32000__c</fullName>
  <label>SFTextAreaLong 32000</label>
  <length>32000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>SFTextArea__c</fullName>
  <label>SFTextArea</label>
  <type>TextArea</type>
 </fields>
 <fields>
  <fullName>SFText_255__c</fullName>
  <label>SFText 255</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>SFURL__c</fullName>
  <label>SFURL</label>
  <type>Url</type>
 </fields>
 <label>BW TestObject Lookup Parent</label>
 <listViews>
  <fullName>All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>BW TestObject Lookup Parent Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>BW TestObject Lookup Parents</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>